# check_sap

./: ChangeLog  INSTALL  LICENCE  Makefile.in  README  README.md  check_sap.c  check_sap.h  configure.ac  icingaexchange.yaml  icingaexchange.yml  mt.h
bapi/: bapialdata.h  bapimnname.h  bapimsname.h  bapipacval.h  bapipaprop.h  bapiret2.h  bapismcval.h  bapitid.h  bapitndext.h
wiki/: wiki.txt
